# blind-omnichain-vault

./: .env.example  .gitignore  .npmrc  Anchor.toml  Cargo.toml  DEMO_VIDEO_SCRIPT.md  LICENSE  README.md  SOLANA_PLAYGROUND_DEPLOY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
encrypt-pre-alpha/: .gitignore  .prettierignore  Cargo.toml  README.md  justfile  package.json
encrypt-pre-alpha/.github/workflows/: deploy-docs.yml
encrypt-pre-alpha/chains/solana/dev/: Cargo.toml
encrypt-pre-alpha/chains/solana/idl/: encrypt_program.json
encrypt-pre-alpha/chains/solana/scripts/: generate-clients.ts
encrypt-pre-alpha/chains/solana/test/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-compute/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-compute/src/: engine.rs  evaluator.rs  lib.rs  mock.rs  mock_crypto.rs
encrypt-pre-alpha/crates/encrypt-dsl/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-dsl-compile/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-dsl-compile/src/: lib.rs
encrypt-pre-alpha/crates/encrypt-dsl/macros/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-dsl/src/: graph.rs  lib.rs  prelude.rs  traits.rs  types.rs
encrypt-pre-alpha/crates/encrypt-grpc/: Cargo.toml  build.rs
encrypt-pre-alpha/crates/encrypt-grpc/src/: lib.rs
encrypt-pre-alpha/crates/encrypt-service/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-service/src/: lib.rs  pipeline.rs  requests.rs  sqlite_store.rs  store.rs
encrypt-pre-alpha/crates/encrypt-types/: Cargo.toml
encrypt-pre-alpha/crates/encrypt-types/src/: encrypted.rs  encryptor.rs  error.rs  events.rs  graph.rs  identifier.rs  lib.rs  messages.rs  types.rs
encrypt-pre-alpha/docs/: book.toml
encrypt-pre-alpha/docs/src/: SUMMARY.md  introduction.md
encrypt-pre-alpha/docs/src/dsl/: conditionals.md  constants.md  graph-compilation.md  operations.md  overview.md  types.md
encrypt-pre-alpha/docs/src/examples/: overview.md
encrypt-pre-alpha/docs/src/frameworks/: anchor.md  native.md  pinocchio.md
encrypt-pre-alpha/docs/src/getting-started/: concepts.md  installation.md  quick-start.md
encrypt-pre-alpha/docs/src/on-chain/: access-control.md  ciphertexts.md  cpi-framework.md  decryption.md  execute-graph.md
encrypt-pre-alpha/docs/src/reference/: accounts.md  events.md  fees.md  instructions.md
encrypt-pre-alpha/docs/src/testing/: mock-vs-real.md  test-framework.md
encrypt-pre-alpha/docs/src/tutorial/: cast-votes.md  create-program.md  create-proposal.md  decrypt-results.md  fhe-logic.md  overview.md  testing.md
encrypt-pre-alpha/proto/: encrypt_service.proto
ika/: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  binary-build-list.json  deny.toml  eslint.config.mjs  ika_sui_config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json  vercel.json
ika/.github/: CODEOWNERS  PUBLISHING-RELEASE.md  PUBLISHING-SDK.md  PUBLISHING-SKILLS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
ika/.github/ISSUE_TEMPLATE/: code-bug.md  doc-bug.md
ika/.github/actions/setup-ssh/: action.yml
ika/.github/workflows/: ci.yaml  deploy-docs.yaml  integration-tests-ci.yaml  labeler.yml  move-formatter.yaml  publish-skills.yaml  publish-typescript-sdk.yml  release.yaml  stale.yml  system-tests-ci.yaml  system-tests-docker.yaml  ts-ci.yaml
ika/contracts/dwallet_utils/: Move.toml
ika/contracts/dwallet_utils/sources/: dwallet_utils.move
ika/contracts/ika/sources/: ika.move
ika/contracts/ika_common/sources/: address.move  advance_epoch_approver.move  bls_committee.move  multiaddr.move  protocol_cap.move  system_current_status_info.move  system_object_cap.move  upgrade_package_approver.move  validator_cap.move
ika/contracts/ika_dwallet_2pc_mpc/sources/: coordinator_inner.move  display.move  pricing.move  support_config.move
ika/contracts/ika_system/sources/: display.move
ika/contracts/ika_system/tests/: dwallet_checkpoint.move  e2e_runner.move  e2e_tests.move  test_utils.move  test_validator.move
ika/crates/dwallet-classgroups-types/src/: lib.rs
ika/crates/dwallet-mpc-centralized-party/: Cargo.toml
ika/crates/dwallet-mpc-centralized-party/src/: lib.rs
ika/crates/dwallet-mpc-types/: Cargo.toml
ika/crates/dwallet-mpc-types/src/: dwallet_mpc.rs  lib.rs  mpc_protocol_configuration.rs
ika/crates/ika/: Cargo.toml  README.md
ika/crates/ika-benchmark/src/: lib.rs
ika/crates/ika-config/data/: fullnode-template-with-path.yaml  fullnode-template.yaml
ika/crates/ika-config/src/: lib.rs  node.rs  test_gateway.yml
ika/crates/ika-core/: Cargo.toml
ika/crates/ika-core/src/: authority.rs  consensus_adapter.rs  lib.rs  (+4 more)
ika/crates/ika-network/: README.md
ika/crates/ika-node/: Cargo.toml
ika/crates/ika-proxy/: Cargo.toml  README.md  demo-config.yaml
ika/crates/ika-sdk/: README.md
ika/crates/ika-sui-client/: Cargo.toml
ika/crates/ika-swarm-config/: Cargo.toml
ika/crates/ika-types/: Cargo.toml
ika/deployed_contracts/mainnet/: address.yaml
ika/deployed_contracts/testnet/: address.yaml
ika/docker/builder/: Dockerfile
ika/docker/ika-node/: .env.example  Dockerfile  Dockerfile.runtime  build.sh
ika/docker/ika-proxy/: Dockerfile  Dockerfile.runtime  build.sh
ika/docs/: .gitignore  README.md  bun.lockb  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
ika/docs/app/: global.css  layout.config.tsx  layout.tsx
ika/docs/components/: ArchitectureDiagram.tsx  InfoBox.tsx  Prerequisites.tsx  SolanaBanner.tsx
ika/docs/lib/: source.ts
ika/examples/: README.md
ika/examples/keyspring/: README.md
ika/examples/multisig-bitcoin/: .gitignore  README.md
ika/scripts/: rerun_ika_info.sh
ika/sdk/build-scripts/: package.json  tsconfig.json
ika/sdk/ika-wasm/: Cargo.toml  README.md  package.json
ika/sdk/typescript/: .prettierignore  README.md  package.json  sui-codegen.config.ts  tsconfig.json  vitest.config.ts
ika/skills/: README.md
programs/bov/: Cargo.toml
programs/bov/src/: encrypt.rs  errors.rs  ika.rs  lib.rs  policy.rs  state.rs
(+570 files in other folders)
