[workspace]
members = [
    "crates/encrypt-types",
    "crates/encrypt-dsl",
    "crates/encrypt-dsl/macros",
    "crates/encrypt-dsl-compile",
    "crates/encrypt-compute",
    "crates/encrypt-service",
    "crates/encrypt-grpc",
    "chains/solana/dev",
    "chains/solana/test",
    "chains/solana/program-sdk/dsl",
    "chains/solana/program-sdk/dsl/macros",
    "chains/solana/program-sdk/types",
    "chains/solana/program-sdk/pinocchio",
    "chains/solana/program-sdk/native",
    "chains/solana/program-sdk/anchor",
    "chains/solana/examples/voting/pinocchio",
    "chains/solana/examples/voting/anchor",
    "chains/solana/examples/voting/native",
    "chains/solana/examples/counter/pinocchio",
    "chains/solana/examples/counter/native",
    "chains/solana/examples/counter/anchor",
    "chains/solana/examples/acl/pinocchio",
    "chains/solana/examples/acl/native",
    "chains/solana/examples/acl/anchor",
    "chains/solana/examples/coin-flip/pinocchio",
    "chains/solana/examples/coin-flip/native",
    "chains/solana/examples/coin-flip/anchor",
    "chains/solana/clients/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace.dependencies]
# ── Internal crates ──
encrypt-types = { path = "crates/encrypt-types" }
encrypt-dsl = { path = "crates/encrypt-dsl" }
encrypt-dsl-macros = { path = "crates/encrypt-dsl/macros" }
encrypt-dsl-compile = { path = "crates/encrypt-dsl-compile" }
encrypt-compute = { path = "crates/encrypt-compute" }
encrypt-service = { path = "crates/encrypt-service" }
encrypt-grpc = { path = "crates/encrypt-grpc" }
encrypt-dev = { path = "chains/solana/dev" }
encrypt-solana-test = { path = "chains/solana/test" }
encrypt-solana-types = { path = "chains/solana/program-sdk/types" }
encrypt-solana-dsl = { path = "chains/solana/program-sdk/dsl" }
encrypt-solana-dsl-macros = { path = "chains/solana/program-sdk/dsl/macros" }
encrypt-pinocchio = { path = "chains/solana/program-sdk/pinocchio" }
encrypt-native = { path = "chains/solana/program-sdk/native" }
encrypt-anchor = { path = "chains/solana/program-sdk/anchor" }

# ── Pinocchio ──
pinocchio = { version = "^0.10", features = ["cpi", "copy"] }
pinocchio-log = "^0.5"
pinocchio-system = "^0.5"
pinocchio-token = "^0.5"

# ── Solana ──
solana-address = { version = "^2.4", features = ["curve25519"] }
solana-program = "^4.0"
solana-account = "3"
solana-account-info = "^3.1"
solana-pubkey = { version = "^4.0", features = ["borsh"] }
solana-instruction = "^3.2"
solana-cpi = "^3.1"
solana-sdk-ids = "^3.1"
solana-system-program = "3"
solana-system-interface = { version = "^3.1", features = ["bincode"] }
solana-program-error = "^3.0"

# ── Anchor ──
anchor-lang = "1"

# ── Proc-macro ──
syn = { version = "^2", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"

# ── Testing ──
mollusk-svm = { version = "^0.11", features = ["inner-instructions"] }
litesvm = "0.11"
solana-program-test = { version = "4.0.0-beta.3", features = ["agave-unstable-api"] }
tokio = { version = "^1.50", features = ["full"] }
trybuild = "^1"

# ── Solana SDK ──
solana-sdk = "4"
solana-rpc-client = "4.0.0-beta.3"
solana-rpc-client-api = "4.0.0-beta.3"
solana-commitment-config = "3"
solana-transaction-status-client-types = "4.0.0-beta.3"
solana-transaction = "3"
bincode = "1"

# ── Utilities ──
codama = "^0.7"
serde_json = "^1"
const-crypto = "^0.3"
thiserror = "^2.0"
borsh = { version = "^1.6", features = ["derive"] }
num-derive = "^0.4"
num-traits = "^0.2"
sha3 = { version = "0.10", default-features = false }
bcs = "0.1"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
