[workspace]
resolver = "3"

exclude = [
    "sdk/ika-wasm",
]

members = [
    "crates/dwallet-mpc-centralized-party",
    "crates/dwallet-mpc-types",
    "crates/dwallet-classgroups-types",
    "crates/ika",
    "crates/ika-config",
    "crates/ika-core",
    "crates/ika-node",
    "crates/ika-sui-client",
    "crates/ika-protocol-config",
    "crates/ika-protocol-config-macros",
    "crates/ika-proxy",
    "crates/ika-swarm",
    "crates/ika-swarm-config",
    "crates/ika-telemetry",
    "crates/ika-types",
    "crates/ika-move-contracts",
    "crates/ika-network",
    "crates/ika-archival",
]
[workspace.package]
# This version string will be inherited by ika-core, ika-node, ika-tools, ika-sdk, and ika crates.
version = "1.1.9"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, ika binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(msim)',
    'cfg(fail_points)',
] }

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
crypto-bigint = { version = "0.7.0-pre.9", default-features = false, features = ["serde"] }

mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010"}
proof = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010"}
class_groups = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010", features = ["threshold"] }
commitment = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010" }
twopc_mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010"}
group = { git = "https://github.com/dwallet-labs/inkrypto", features = ["os_rng"], rev = "abd7f010"}
homomorphic_encryption = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010"}

k256 = { version = "0.14.0-pre.11", default-features = false }
p256 = { version = "0.14.0-pre.11", default-features = false }
curve25519-dalek = { version = "5.0.0-pre.1", features = ["rand_core"] }

anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-trait = "0.1.61"
axum = { version = "0.8", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum-server = { version = "0.8", default-features = false, features = [
    "tls-rustls-no-provider",
] }
backoff = { version = "0.4.0", features = [
    "futures",
    "futures-core",
    "pin-project-lite",
    "tokio",
    "tokio_1",
] }
base64 = "0.22.1"
bcs = "0.1.4"
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
cached = "0.43.0"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_complete = "4.4"
const-str = "1.0.0"
colored = "3.0.0"
count-min-sketch = "0.1.7"
criterion = { version = "0.8.1", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
dashmap = "5.5.3"
# datatest-stable = "0.1.2"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive_more = "2.0.1"
dirs = "6.0.0"
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
governor = "0.6.3"
hex = "0.4.3"
http = "1"
humantime = "2.1.0"
hyper = "1"
im = "15"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.18.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
itertools = "0.14.0"
tikv-jemalloc-ctl = "0.5.4"
jsonrpsee = { version = "0.26.0", features = ["server", "macros", "ws-client", "http-client", "jsonrpsee-core"] }
lru = "0.16.3"
merlin = { version = "3", default-features = false }
miette = { version = "7", features = ["fancy"] }
mockall = "0.14.0"
mime = "0.3"
moka = { version = "0.12", default-features = false, features = [
    "sync",
    "atomic64",
] }
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "9d787303d855f6cec92eb94933717d4ee1963548", package = "msim" }
multiaddr = "0.18.2"
nonempty = "0.12.0"
num-bigint = "0.4.6"
num_cpus = "1.15.0"
num_enum = "0.7.4"
object_store = { version = "0.13.0", features = [
    "aws",
    "gcp",
    "azure",
    "http",
] }
once_cell = "1.18.0"
parking_lot = "0.12.5"
pprof = { version = "0.15.0", features = ["cpp", "frame-pointer"] }
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = { version = "0.14", features = ["protobuf"] }
quote = "1.0.23"
rand = "0.9"
rand_chacha = "0.9"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
rayon = "1.11.0"
protobuf = { version = "3.7", features = ["with-bytes"] }
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
roaring = "0.11.1"
rstest = "0.25.0"
rustls-pemfile = "2"
schemars = { version = "0.8.21", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-env = "0.2.0"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "ring",
] }
serde-name = "0.2.1"
serde-reflection = "0.5.0"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_repr = "0.1"
serde_with = "3.17"
serde_yaml = "0.9.34+deprecated"
signature = "3.0.0-rc.1"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
snap = "1.1.0"
syn = { version = "2.0.104", features = ["full", "derive", "extra-traits"] }
tap = "1.0.1"
tempfile = "3.20.0"
test-fuzz = "7.2.0"
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-retry = "0.3"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tonic = { version = "0.14.2", features = [
    "zstd",
    "transport",
    "tls-webpki-roots",
] }
tonic-build = { version = "0.14.2", features = ["prost", "transport"] }
tonic-health = "0.14.2"
tower = { version = "0.5", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
twox-hash = "2.1.1"
tower-http = { version = "0.6.8", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
tracing = "0.1.37"
url = "2.3.1"
zeroize = "1.6.0"
shlex = "1.3.0"

lazy_static = "1.5.0"

# Move dependencies
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-compiler = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-package = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-package-alt-compilation = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }


fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "db643fd05a1b1c4cd52de3939766b53e12ce137e" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "db643fd05a1b1c4cd52de3939766b53e12ce137e" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "db643fd05a1b1c4cd52de3939766b53e12ce137e", package = "fastcrypto-zkp" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "4b5f0f1d06a31c8ef78ec2e5b446bc633e4e2f77" }

### Sui Members ###
bin-version =  { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
mysten-common = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
mysten-network = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
mysten-service = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-faucet = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-graphql-rpc = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-indexer = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-json = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-json-rpc-api = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-macros = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-metrics-push-client = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-move = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-package-management = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-protocol-config-macros = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-rpc-api = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-simulator = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-swarm = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-swarm-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-test-transaction-builder = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-tls = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-transaction-checks = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
test-cluster = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
typed-store = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
typed-store-error = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }

sui-execution = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }

consensus-config = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
consensus-core = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }
consensus-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.67.1" }

### Workspace Members ###
dwallet-rng = { path = "crates/dwallet-rng" }
dwallet-mpc-centralized-party = { path = "crates/dwallet-mpc-centralized-party" }
dwallet-mpc-types = { path = "crates/dwallet-mpc-types"}
dwallet-classgroups-types = { path = "crates/dwallet-classgroups-types"}
ika = { path = "crates/ika" }
ika-config = { path = "crates/ika-config" }
ika-core = { path = "crates/ika-core" }
ika-node = { path = "crates/ika-node" }
ika-sui-client = { path = "crates/ika-sui-client" }
ika-porxy = { path = "crates/ika-proxy" }
ika-protocol-config = { path = "crates/ika-protocol-config" }
ika-swarm = { path = "crates/ika-swarm" }
ika-swarm-config = { path = "crates/ika-swarm-config" }
ika-telemetry = { path = "crates/ika-telemetry" }
ika-types = { path = "crates/ika-types" }
ika-move-contracts = { path = "crates/ika-move-contracts" }
ika-network = { path = "crates/ika-network" }
ika-archival = { path = "crates/ika-archival" }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "8aabcee5" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures", tag = "rfc6979/v0.5.0-rc.1" }
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-axum = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-value = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }