[package]
name = "bov"
version = "0.1.0"
description = "Blind Omnichain Vault — Solana program (Ika dWallets + Encrypt FHE)"
authors = ["thesithunyein"]
repository = "https://github.com/thesithunyein/blind-omnichain-vault"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "bov"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
