[package]
name = "encrypt-compute"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
encrypt-types = { workspace = true }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
encrypt-dsl = { workspace = true }
