[package]
name = "dwallet-mpc-centralized-party"
edition = "2024"
version.workspace = true

[dependencies]
mpc.workspace = true
twopc_mpc.workspace = true
commitment = { git = "https://github.com/dwallet-labs/inkrypto", rev = "abd7f010" }
web-sys = "0.3.77"
class_groups.workspace = true
group.workspace = true
homomorphic_encryption.workspace = true
dwallet-mpc-types.workspace = true
schemars.workspace = true
anyhow.workspace = true
bcs.workspace = true
rand_core = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.2.16", features = ["js"], optional = true } # TODO: idk why, but we need this, also this is old version
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
log = "0.4.27"
console_log = "1.0.0"
crypto-bigint.workspace = true

[features]
wasm_js = ["group/wasm_js", "dep:getrandom"]

[lints]
workspace = true

[patch.crates-io]
crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "8aabcee5" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures", tag = "rfc6979/v0.5.0-rc.1" }