[package]
name = "ika-node"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

# Default binary (auto-detects mode from config)
[[bin]]
name = "ika-node"
path = "src/main.rs"

# Validator binary (requires consensus_config)
[[bin]]
name = "ika-validator"
path = "src/bin/ika-validator.rs"

# Fullnode binary (no consensus, no notifier)
[[bin]]
name = "ika-fullnode"
path = "src/bin/ika-fullnode.rs"

# Notifier binary (requires notifier_client_key_pair)
[[bin]]
name = "ika-notifier"
path = "src/bin/ika-notifier.rs"

[dependencies]
sui-json-rpc-types.workspace = true
anemo.workspace = true
anemo-tower.workspace = true
arc-swap.workspace = true
axum.workspace = true
anyhow.workspace = true
bin-version.workspace = true
clap.workspace = true
consensus-core.workspace = true
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tower.workspace = true
reqwest.workspace = true
tap.workspace = true
serde.workspace = true
humantime.workspace = true

sui-macros.workspace = true
ika-config.workspace = true
ika-core.workspace = true
ika-network.workspace = true
ika-protocol-config.workspace = true
ika-telemetry.workspace = true
ika-types.workspace = true
ika-archival.workspace = true
mysten-metrics.workspace = true
mysten-common.workspace = true
typed-store.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
fastcrypto-zkp.workspace = true
sui-types.workspace = true
sui-storage.workspace = true
ika-sui-client.workspace = true
sui-metrics-push-client.workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true


[features]
default = ["enforce-minimum-cpu"]

# Set this feature to enforce a minimum of 16 CPU cores for cryptographic computations.
enforce-minimum-cpu = ["ika-core/enforce-minimum-cpu"]
