[package]
name = "ika"
version.workspace = true
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bin-version.workspace = true
dwallet-rng.workspace = true
dwallet-classgroups-types.workspace = true
clap.workspace = true
clap_complete.workspace = true
dwallet-mpc-centralized-party.workspace = true
http.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

ika-config.workspace = true
ika-protocol-config.workspace = true
ika-swarm-config.workspace = true
ika-types.workspace = true
ika-swarm.workspace = true

fastcrypto.workspace = true

colored.workspace = true

telemetry-subscribers.workspace = true

sui.workspace = true
sui-config.workspace = true

sui-keys.workspace = true
sui-json-rpc-types.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
serde_yaml.workspace = true
ika-sui-client.workspace = true
bcs.workspace = true
dwallet-mpc-types.workspace = true
url.workspace = true
hex.workspace = true
rand.workspace = true
base64.workspace = true
reqwest.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl.workspace = true

[dev-dependencies]
serde_json.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["tikv-jemalloc-ctl"]

[features]
protocol-commands = ['ika-sui-client/protocol-commands']