[package]
name = "encrypt-solana-client"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
borsh = { workspace = true }
anchor-lang = { workspace = true }
solana-account-info = { workspace = true }
solana-pubkey = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-cpi = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-client = { version = "^3.1", optional = true }
solana-account = { version = "4", optional = true }
solana-program-error = { workspace = true }
thiserror = { workspace = true }

# gRPC client
encrypt-types = { workspace = true }
encrypt-compute = { workspace = true }
encrypt-grpc = { workspace = true }
solana-sdk = { workspace = true }
tonic = { version = "0.14", features = ["tls-native-roots", "transport"] }
