[package]
name = "encrypt-solana-dsl-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
encrypt-dsl-compile = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
